# chatgpt-scraper

./: .env.example  .gitmodules  .pre-commit-config.yaml  Dockerfile  compose.yml  main.py  pyproject.toml
.github/: LICENSE  README.md
chatgpt/: browser.py  chatbot.py  chatgpt_interaction.py  configuration.py  element_interactor.py  logger_config.py  temporary_chat.py
chatgpt/auth/: OTPAuth.py  accounts_deserializer.py  generate_otp.py  login_method.py
chatgpt/auth/methods/: apple_login.py  basic_login.py  google_login.py  microsoft_login.py
chatgpt/auth/otp_auth/: otp_auth.py  test_otp_auth.py
chatgpt/utilities/: is_linux.py
scripts/: entrypoint.sh
utilities/: __init__.py  poetry.py
